--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="settings_fragment">Settings fragment</string>
     <string name="favorite_fragment">Favorite fragment</string>
     <string name="contact_fragment">Contact fragment</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
